test/errors/parser/syntax_unterminated_paren.ms
a = (1
// Syntax Error (Line 1, Column 7): Expected a closing parentheses.
